# viral-spatiotemporal-evolution-plot

./: Makefile  README.md  data.toml  make-plot.py  pyproject.toml
docs/: index.html
src/vsep/: __init__.py  config.py  plot.py  timeparse.py
src/vsep/cli/: __init__.py  main.py
test/: test_timeparse.py
